<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.CreateAppointmentFragment"
    android:id="@+id/create_appointment_fragment">

    <EditText
        android:id="@+id/category_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        android:hint="@string/set_category_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hold_appointments_to_delete_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        android:text="@string/delete_appointment"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/appointments_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/add_appointment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/appointment_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="15dp"
            android:singleLine="true"
            android:layout_margin="10dp"
            android:textColor="@color/blue"
            android:hint="@string/enter_appointment_name"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/date"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:id="@+id/date_text_view" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/time_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/time"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_appointment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/add"
        android:layout_gravity="center"
        android:tint="@color/green"/>

    <TextView
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_green_button"
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/submit" />

</LinearLayout>