<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/category_item">

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/edit_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/edit"/>
        <ImageView
            android:id="@+id/delete_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/delete"/>
    </LinearLayout>

    <TextView
        android:id="@+id/category_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="25dp"
        android:layout_toLeftOf="@id/edit_layout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />
    <LinearLayout
        android:id="@+id/appointments_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/category_name_text_view"/>

</RelativeLayout>