...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity"
    android:id="@+id/home_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/title_bar"
...

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/groups_recycler_view"
        android:layout_below="@id/groups_text_view"/>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/add_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
