...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.AppointmentsOverviewFragment"
    android:id="@+id/appointments_overview_fragment">

   <androidx.recyclerview.widget.RecyclerView
       android:layout_above="@id/add_category_button"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/categories_recycler_view" />

    <TextView
        android:id="@+id/hold_appointments_text_view"
...
