...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_in_background"
        android:scaleType="centerCrop"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"/>
...
